@startuml

' Clase Abstracta Persona

abstract class Persona {
    - String dni
    - String nombreCompleto
    - LocalDate fechaNacimiento
    - String sexo
    --
    + Persona(String, String, LocalDate, String)
    + void mostrarDatos()
    + String getDni()
    + String getNombreCompleto()
    + LocalDate getFechaNacimiento()
    + String getSexo()
    + void setNombreCompleto(String)
    + void setSexo(String)
    - String validarDni(String)
    - String validarNombreCompleto(String)
    - LocalDate validarFechaNacimiento(LocalDate)
    - String validarSexo(String)
}

' Clase PersonalAdmin

class PersonalAdmin <<final>> {
    - int idEmpleado
    --
    + PersonalAdmin(String, String, LocalDate, String, int)
    + void registrarPaciente(Paciente)
    + void modificarDatosPersonalesPaciente(Paciente, String, String)
    + void darAltaPaciente(Paciente)
    + void darBajaPermanentePaciente(Paciente)
    + void darBajaTemporalPaciente(Paciente)
    + void mostrarDatos()
    + int getIdEmpleado()
    - int validarIdEmpleado(int)
}

' Clase Medico

class Medico <<final>> {
    - int numeroColegiado
    - String especialidad
    --
    + Medico(String, String, LocalDate, String, int, String)
    + void consultarHistorial(Paciente)
    + void añadirDiagnostico(Paciente, String)
    + void añadirTratamiento(Paciente, String)
    + void mostrarDatos()
    + int getNumeroColegiado()
    + String getEspecialidad()
    - int validarNumeroColegiado(int)
    - String validarEspecialidad(String)
}

' Clase Paciente

class Paciente {
    - int numeroHistoriaClinica
    - String direccion
    - int numeroTelefono
    - String correoElectronico
    - int telefonoEmergencia
    - String estado
    - boolean perteneceSistema
    - String antecedentesMedicos
    - HistorialMedico historial
    --
    + Paciente(String, String, LocalDate, String, String, int, String, int, String)
    + void mostrarDatos()
    + void setDireccion(String)
    + void setNumeroTelefono(int)
    + void setCorreoElectronico(String)
    + void setTelefonoEmergencia(int)
    + void setEstado(String)
    + void setPerteneceSistema(boolean)
    + int getNumeroHistoriaClinica()
    + String getDireccion()
    + int getNumeroTelefono()
    + String getCorreoElectronico()
    + int getTelefonoEmergencia()
    + String getEstado()
    + boolean getPerteneceSistema()
    + HistorialMedico getHistorial()
    - String validarDireccion(String)
    - int validarTelefono(int)
    - String validarCorreo(String)
    - String validarEstado(String)
    - String validarAntecedentesMedicos(String)
}

' Clase HistorialMedico

class HistorialMedico {
    - String enfermedadesPrevias
    - String alergias
    - String intervencionesQuirurgicas
    - String enfermedadesCronicas
    - String medicacion
    - String diagnosticos
    - String tratamientos
    --
    + HistorialMedico()
    + void agregarEnfermedadPrevia(String)
    + void agregarAlergia(String)
    + void agregarIntervencion(String)
    + void agregarEnfermedadCronica(String)
    + void agregarMedicacion(String)
    + void agregarDiagnostico(String)
    + void agregarTratamiento(String)
    + void mostrarHistorial()
    - String agregarNuevoDato(String, String)
    - void imprimirElementos(String, String)
}

' Clase AreaFacturacion

class AreaFacturacion {
    - int idFactura
    - String concepto
    - double importe
    - LocalDate fechaFactura
    - static List<AreaFacturacion> facturas
    - static Map<Integer, List<AreaFacturacion>> facturasPorPaciente
    - static int contadorFacturas
    --
<<<<<<< HEAD
    + AreaFacturacion(String, double, LocalDate)
    + void generarFactura(Paciente) throws EstadoPacienteException
    + static List<AreaFacturacion> buscarFacturasPorPaciente(int)
=======
    - "List<AreaFacturacion>" facturas
    - "Map<Integer, List<AreaFacturacion>>" facturasPorPaciente
    - int contadorFacturas
    --
    + void generarFactura(Paciente)  ' throws EstadoPacienteException
    + static "List<AreaFacturacion>" buscarFacturasPorPaciente(int)
    + static void notificarProcedimiento(Paciente, String)
>>>>>>> a3ed0a224dbb0bbea806e3f2398fa0afeb7766e3
    + static void notificarProcedimiento(Paciente, String, double)
    + static void listarTodasFacturas()
    + static void mostrarFacturasDePaciente(Paciente)
    + String toString()
    + int getIdFactura()
    + String getConcepto()
    + double getImporte()
    + LocalDate getFechaFactura()
    - int validarIdFactura(int)
    - String validarConcepto(String)
    - double validarImporte(double)
    - LocalDate validarFecha(LocalDate)
}

' Clase EstadoPacienteException (RuntimeException)

class EstadoPacienteException {
    --
    + EstadoPacienteException(String)
    + String getMessage()
    + String getMensajeOriginal()
}

' Herencias
Persona <|-- PersonalAdmin
Persona <|-- Medico
Persona <|-- Paciente

' Composición 
Paciente *-- HistorialMedico : POSEE

' Asociaciones (relaciones de uso)
PersonalAdmin --> Paciente : GESTIONA
Medico --> Paciente : ATIENDE
AreaFacturacion --> Paciente : FACTURA

' Dependencias (uso temporal)
AreaFacturacion ..> EstadoPacienteException : LANZA
Medico ..> AreaFacturacion : NOTIFICA

@enduml